--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.7.2",
     "typescript": "^5.2.2"
   },
