--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:5005/api
 VITE_APP_NAME=Greenlet
 SERVER_PORT=5005
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyAykqyjJSiEqi3skepf4vJpjQP49fTbj1Q
