--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-router-dom": "^6.16.0",
     "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.7.2",
