--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
     "react-google-places-autocomplete": "^4.0.1",
